--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,7 @@
         android:id="@+id/questionMark"
         android:title="questionMark"
         android:icon="@drawable/question_mark"
+        android:iconTint="@android:color/white"
         app:showAsAction="ifRoom"
         />
 
