--- a/app/src/main/res/layout/activity_complete_or_fail.xml
+++ b/app/src/main/res/layout/activity_complete_or_fail.xml
@@ -31,7 +31,7 @@
                     android:layout_height="40dp"
                     android:gravity="center|start"
                     android:text="Progress made:"
-                    android:textColor="@android:color/black"
+                    android:textColor="@android:color/white"
                     android:textSize="15dp" />
 
                 <TextView
@@ -40,7 +40,7 @@
                     android:layout_height="40dp"
                     android:gravity="center|start"
                     android:text="Time spent (Minutes):"
-                    android:textColor="@android:color/black"
+                    android:textColor="@android:color/white"
                     android:textSize="15dp"/>
             </LinearLayout>
 
@@ -74,7 +74,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="10dp"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:text="Submit Progress" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
