--- a/app/src/main/res/layout/journal_list_items.xml
+++ b/app/src/main/res/layout/journal_list_items.xml
@@ -18,7 +18,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:alpha="0.4"
+            android:alpha="0.3"
             android:scaleType="fitXY"
             android:src="@drawable/cardviewbackground1" />
 
@@ -34,7 +34,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
                 android:text="TextView"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="15dp"
                 android:textStyle="bold"/>
 
@@ -61,7 +61,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:text="Time:"
-                            android:textColor="@android:color/black"
+                            android:textColor="@android:color/white"
                             android:textSize="15dp"/>
 
                         <TextView
@@ -70,7 +70,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:text="12:10:14"
-                            android:textColor="@android:color/black"
+                            android:textColor="@android:color/white"
                             android:textSize="15dp"/>
                     </LinearLayout>
 
@@ -86,7 +86,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:text="Level:"
-                            android:textColor="@android:color/black"
+                            android:textColor="@android:color/white"
                             android:textSize="15dp"/>
 
                         <TextView
@@ -95,7 +95,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:text="1"
-                            android:textColor="@android:color/black"
+                            android:textColor="@android:color/white"
                             android:textSize="15dp"/>
                     </LinearLayout>
                 </LinearLayout>
@@ -118,7 +118,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Date:"
-                            android:textColor="@android:color/black"
+                            android:textColor="@android:color/white"
                             android:textSize="15dp"/>
 
                         <TextView
@@ -127,7 +127,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="32dp"
                             android:text="26-02-18"
-                            android:textColor="@android:color/black"
+                            android:textColor="@android:color/white"
                             android:textSize="15dp"/>
                     </LinearLayout>
 
@@ -142,7 +142,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Attempt:"
-                            android:textColor="@android:color/black"
+                            android:textColor="@android:color/white"
                             android:textSize="15dp"/>
 
                         <TextView
@@ -151,7 +151,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:text="1"
-                            android:textColor="@android:color/black"
+                            android:textColor="@android:color/white"
                             android:textSize="15dp"/>
                     </LinearLayout>
                 </LinearLayout>
@@ -164,7 +164,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:text="TextView"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="15dp"/>
 
             <TextView
@@ -173,7 +173,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:text="TextView"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="15dp"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
