--- a/app/src/main/res/layout/activity_meditation.xml
+++ b/app/src/main/res/layout/activity_meditation.xml
@@ -29,9 +29,11 @@
             android:src="@drawable/cardviewbackground1" />
 
         <LinearLayout
+            android:id="@+id/TheSensors"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center|start"
+            android:layout_marginStart="10dp"
             android:orientation="vertical">
 
             <TextView
@@ -39,7 +41,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:layout_marginStart="10dp"
                 android:textColor="@android:color/white"
                 android:textSize="18dp" />
 
@@ -48,7 +49,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:layout_marginStart="10dp"
                 android:textColor="@android:color/white"
                 android:textSize="18dp" />
 
@@ -57,7 +57,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:layout_marginStart="10dp"
                 android:textColor="@android:color/white"
                 android:textSize="18dp" />
         </LinearLayout>
