--- a/app/src/main/res/layout/activity_pop_up_info.xml
+++ b/app/src/main/res/layout/activity_pop_up_info.xml
@@ -7,11 +7,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.rossg_000.fyp_v3.PopUpInfo">
 
-
+    
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_height="350dp"
         android:backgroundTint="#8C131e72"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,22 +22,40 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:alpha="0.4"
+            android:alpha="0.7"
             android:scaleType="fitXY"
-            android:src="@drawable/darkbluebackground" />
+            android:src="@drawable/popupinfobackground" />
 
-        <TextView
-            android:id="@+id/TaskPopUpInfo"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="serif"
-            android:text="TextView"
-            android:textColor="@android:color/white"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent">
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/TheImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="8dp"
+                    android:src="@drawable/new_day"
+                    />
+
+                <TextView
+                    android:id="@+id/TaskPopUpInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="serif"
+                    android:text="TextView"
+                    android:textColor="@android:color/white"
+                    android:textSize="20dp"/>
+            </LinearLayout>
+        </ScrollView>
 
     </android.support.v7.widget.CardView>
 
