--- a/app/src/main/res/layout/activity_complete_or_fail.xml
+++ b/app/src/main/res/layout/activity_complete_or_fail.xml
@@ -2,23 +2,131 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="170dp"
+    android:layout_gravity="center"
     tools:context="com.example.rossg_000.fyp_v3.CompleteOrFail">
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:backgroundTint="#8C131e72"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        card_view:cardCornerRadius="1dp">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:alpha="0.7"
+        android:scaleType="fitXY"
+        android:src="@drawable/popupinfobackground" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#8C131e72"
+            android:alpha="0.7"
+            android:background="@drawable/popupinfobackground"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="200dp"
+                        android:layout_height="40dp"
+                        android:gravity="center|start"
+                        android:text="Progress made:"
+                        android:textColor="@android:color/white"
+                        android:textSize="15dp" />
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="200dp"
+                        android:layout_height="40dp"
+                        android:gravity="center|start"
+                        android:text="Time spent (Minutes):"
+                        android:textColor="@android:color/white"
+                        android:textSize="15dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/NumberInput"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:backgroundTint="@android:color/white"
+                        android:ems="10"
+                        android:inputType="number" />
+
+                    <EditText
+                        android:id="@+id/DurationInput"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:backgroundTint="@android:color/white"
+                        android:ems="10"
+                        android:inputType="number" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/Complete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="10dp"
+                android:text="Submit Progress"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <!--
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="170dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#8C131e72"
+        android:alpha="0.7"
+        android:background="@drawable/popupinfobackground"
         android:orientation="vertical"
-        android:alpha="0.9"
-        android:background="@drawable/cardviewbackground1">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="8dp">
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -41,7 +149,7 @@
                     android:gravity="center|start"
                     android:text="Time spent (Minutes):"
                     android:textColor="@android:color/white"
-                    android:textSize="15dp"/>
+                    android:textSize="15dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -53,17 +161,17 @@
                     android:id="@+id/NumberInput"
                     android:layout_width="100dp"
                     android:layout_height="40dp"
+                    android:backgroundTint="@android:color/white"
                     android:ems="10"
-                    android:inputType="number"
-                    android:backgroundTint="@android:color/black"/>
+                    android:inputType="number" />
 
                 <EditText
                     android:id="@+id/DurationInput"
                     android:layout_width="100dp"
                     android:layout_height="40dp"
+                    android:backgroundTint="@android:color/white"
                     android:ems="10"
-                    android:inputType="number"
-                    android:backgroundTint="@android:color/black"/>
+                    android:inputType="number" />
             </LinearLayout>
         </LinearLayout>
 
@@ -71,10 +179,12 @@
             android:id="@+id/Complete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="8dp"
             android:layout_marginBottom="10dp"
-            android:textColor="@android:color/white"
-            android:text="Submit Progress" />
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:text="Submit Progress"
+            android:textColor="@android:color/white" />
     </LinearLayout>
+
+    -->
 </android.support.constraint.ConstraintLayout>
