--- a/app/src/main/res/layout/activity_pop_up_info.xml
+++ b/app/src/main/res/layout/activity_pop_up_info.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.rossg_000.fyp_v3.PopUpInfo">
 
-    
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="350dp"
@@ -38,6 +37,7 @@
                 <ImageView
                     android:id="@+id/TheImage"
                     android:layout_width="match_parent"
+                    android:scaleType="fitXY"
                     android:layout_height="250dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
@@ -50,30 +50,14 @@
                     android:id="@+id/TaskPopUpInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:fontFamily="serif"
                     android:text="TextView"
                     android:textColor="@android:color/white"
                     android:textSize="20dp"/>
             </LinearLayout>
         </ScrollView>
-
     </android.support.v7.widget.CardView>
-
-    <!--
-    <TextView
-        android:id="@+id/TaskPopUpInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="serif"
-        android:text="TextView"
-        android:alpha="0.8"
-        android:background="@drawable/cardviewbackground1"
-        android:textColor="@android:color/black"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-        -->
 </android.support.constraint.ConstraintLayout>
